--- a/config/database.yml
+++ b/config/database.yml
@@ -24,13 +24,14 @@ test:
 # Store production database in the storage/ directory, which by default
 # is mounted as a persistent Docker volume in config/deploy.yml.
 production:
-  primary: &production_primary
-    adapter: postgresql
-    url: <%= ENV["DATABASE_URL"] %>
-    pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  primary:
+    <<: *default
+    database: storage/production.sqlite3
   cache:
-    <<: *production_primary
+    <<: *default
+    database: storage/production_cache.sqlite3
     migrations_paths: db/cache_migrate
   queue:
-    <<: *production_primary
+    <<: *default
+    database: storage/production_queue.sqlite3
     migrations_paths: db/queue_migrate
